name:                language-cil
version:             0.0.2
synopsis:            Manipulating Common Intermediate Language AST
description:
  Language-Cil is a Haskell library for manipulating CIL abstract syntax and generating .il files.
  Common Intermediate Language (CIL), also known as Microsoft Intermediate Language (MSIL),
  is the lowest level language that runs on Microsoft .NET and Mono.

  Read more on Wikipedia: http://en.wikipedia.org/wiki/Common_Intermediate_Language

  This library is still very much under development, it only supports a small subset of the full CIL.
license:             BSD3
license-file:        LICENSE
author:              Jeroen Leeuwestein,
                     Tom Lokhorst
maintainer:          Tom Lokhorst <tom@lokhorst.eu>
stability:           Experimental
category:            Language, .NET
build-type:          Simple
cabal-version:       >= 1.2
hs-source-dirs:      src
exposed-modules:     Language.Cil
                     Language.Cil.Analysis
                     Language.Cil.Build
                     Language.Cil.Pretty
                     Language.Cil.Syntax
other-modules:       Language.Cil.Scanner
                     Language.Cil.Parser
build-depends:       base, uulib

