name:                shuffle
version:             0.1.0.0
copyright:			 Utrecht University, Department of Information and Computing Sciences, Software Technology group
-- synopsis:            
-- description:         
homepage:            http://www.cs.uu.nl/wiki/UHC
license:             BSD3
-- license-file:
author:              UHC Team
maintainer:          uhc-developers@lists.science.uu.nl
-- copyright:           
-- category:            
build-type:          Custom
cabal-version:       >=1.8

executable shuffle
  main-is:             Shuffle.hs
  extensions:		   Rank2Types, TypeSynonymInstances, FlexibleInstances, FlexibleContexts
  other-modules:       AspectExpr, AspectExprEval, Common, CDoc, CDocCommon, CDocSubst, CDocInline, ChunkParser, MainAG
  build-depends:       base, containers, uulib, network, directory, process, array
  build-depends:	   uuagc >= 0.9.40.3, uuagc-cabal >= 1.0.3.0
